调整日志输出，通过log4j打印sql

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -46,7 +46,5 @@ mybatis:
   #下划线和驼峰互相转换
   configuration:
     map-underscore-to-camel-case: true
+    #通过log4j实现类打印日志
     log-impl: org.apache.ibatis.logging.log4j.Log4jImpl
-logging:
-  level:
-    org.wang.bootdemo.mapper: debug
