--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,12 @@
-#配置log4j
+#\u914D\u7F6Elog4j
 log4j.rootLogger=INFO,stdout,logger
 
-#控制台输出
+#\u63A7\u5236\u53F0\u8F93\u51FA
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%p][%d{yyyy-mm-dd HH:mm:ss,SSS}] %C | %m%n
 
-#输出到文件
+#\u8F93\u51FA\u5230\u6587\u4EF6
 log4j.appender.logger=org.apache.log4j.RollingFileAppender
 #log4j.appender.logger.Threshold=DEBUG
 log4j.appender.logger.file=logs/detail_debug.log
@@ -15,9 +15,9 @@ log4j.appender.logger.MaxBackupIndex=10
 log4j.appender.logger.layout=org.apache.log4j.PatternLayout
 log4j.appender.logger.layout.ConversionPattern=[%p][%d{yyyy-mm-dd HH:mm:ss,SSS}] %C | %m%n
 
-#配置logger扫描的包路径  这样才会打印sql
+#\u914D\u7F6Elogger\u626B\u63CF\u7684\u5305\u8DEF\u5F84  \u8FD9\u6837\u624D\u4F1A\u6253\u5370sql
 log4j.logger.org.wang.bootdemo.mapper=DEBUG
-#打印sql部分
+#\u6253\u5370sql\u90E8\u5206
 #log4j.logger.java.sql=DEBUG,logger
 #log4j.logger.java.sql.Connection = DEBUG,logger
 #log4j.logger.java.sql.Statement = DEBUG,logger
