--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.20</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
